modified navbar of html files

--- a/covid19/first-aid.html
+++ b/covid19/first-aid.html
@@ -50,14 +50,14 @@
                         <a href="">First Aid</a>
                       </li>
                       <li class="dropdown-link">
-                        <a href="#">Procedures</a>
+                        <a href="procedure.html">Procedures</a>
                         <div class="dropdown second">
                           <ul>
                             <li class="dropdown-link">
-                              <a href="#">Testing Procedure</a>
+                              <a href="testing-procedure.html">Testing Procedure</a>
                             </li>
                             <li class="dropdown-link">
-                              <a href="#">Quarantine Procedure</a>
+                              <a href="quarantine-procedure.html">Quarantine Procedure</a>
                             </li>
                             <div class="arrow"></div>
                           </ul>
@@ -106,13 +106,13 @@
       <div class="header-slide">
         <div class="header-slide-container">
           <div class="notes">
-            <h1><mark>Protect yourself and others from COVID-19</mark></h1>
+            <h1><mark>What to Do If You Are Sick?</mark></h1>
             <p>
-              If COVID-19 is spreading in your community, stay safe by taking some simple precautions, such as physical distancing, wearing a mask, keeping rooms well ventilated, avoiding crowds, cleaning your hands, and coughing into a bent elbow or tissue. Check local advice where you live and work. <strong>Do it all!</strong>
+              If you have a fever, cough or other symptoms, you might have COVID-19. Most people have mild illness and are able to recover at home. If you think you may have been exposed to COVID-19, contact your healthcare provider.
             </p>
           </div>
           <div class="picture">
-            <img src="img/flat-lay-hand-protecting-house-from-viruses.jpg" alt="COVID-19 Virus Prevention - Photo by freepik">
+            <img src="img/12444110-3x2-xlarge.jpg" alt="COVID-19 Virus First Aid - Photo by ABC.net.au">
           </div>
         </div>
       </div>
@@ -120,89 +120,140 @@
       <!-- main section -->
       <main>
         <div class="content">
-          <h3>What to do to keep yourself and others safe from COVID-19</h3>
+          <p>
+            If you have a fever, cough or other symptoms, you might have COVID-19. Most people have mild illness and are able to recover at home. If you think you may have been exposed to COVID-19, contact your healthcare provider.
+          </p>
           <br>
           <ul class="list">
-            <li>
-              <strong>Maintain at least a 1-metre distance between yourself and others</strong> to reduce your risk of infection when they cough, sneeze or speak. Maintain an even greater distance between yourself and others when indoors. The further away, the better.
-            </li>
-            <li>
-              <strong>Make wearing a mask a normal part of being around other people. The appropriate use, storage and cleaning or disposal are essential to make masks as effective as possible.</strong>
-            </li>
+            <li>Keep track of your symptoms.</li>
+            <li> <strong>If you have an emergency warning sign (including trouble breathing),</strong> get emergency medical care immediately.</li>
           </ul>
           <br>
-          <p>Here are the basics of how to wear a mask:</p>
+          <h2>Steps to help prevent the spread of COVID-19 if you are sick</h2>
+          <br>
+          <p>If you are sick with COVID-19 or think you might have COVID-19, follow the steps below to care for yourself and to help protect other people in your home and community.</p>
           <br>
           <ul class="list">
             <li>
-              Clean your hands before you put your mask on, as well as before and after you take it off, and after you touch it at any time.
-            </li>
-            <li>Make sure it covers both your nose, mouth and chin.</li>
-            <li>
-              When you take off a mask, store it in a clean plastic bag, and every day either wash it if it’s a fabric mask, or dispose of a medical mask in a trash bin.
-            </li>
-            <li>Don’t use masks with valves.</li>
-          </ul>
-          <br><br>
-          <h3>How to make your environment safer?</h3>
-          <br>
-          <ul class="list">
-            <li>
-              <strong>Avoid the 3Cs: spaces that are <u>c</u>losed, <u>c</u>rowded or involve <u>c</u>lose contact.</strong>
+              Stay home except to get medical care
               <br>
               <ul>
                 <li>
-                  Outbreaks have been reported in restaurants, choir practices, fitness classes, nightclubs, offices and places of worship where people have gathered, often in crowded indoor settings where they talk loudly, shout, breathe heavily or sing.
+                  <strong>Stay home.</strong> Most people with COVID-19 have mild illness and can recover at home without medical care. Do not leave your home, except to get medical care. Do not visit public areas.
                 </li>
                 <li>
-                  The risks of getting COVID-19 are higher in crowded and inadequately ventilated spaces where infected people spend long periods of time together in close proximity. These environments are where the virus appears to spreads by respiratory droplets or aerosols more efficiently, so taking precautions is even more important.
+                  <strong>Take care of yourself.</strong> Get rest and stay hydrated. Take over-the-counter medicines, such as acetaminophen, to help you feel better.
+                </li>
+                <li>
+                  <strong>Stay in touch with your doctor.</strong> Call before you get medical care. Be sure to get care if you have trouble breathing, or have any other emergency warning signs, or if you think it is an emergency.
+                </li>
+                <li>
+                  <strong>Avoid public transportation,</strong> ride-sharing, or taxis.
                 </li>
               </ul>
             </li>
+            <br>
             <li>
-              <strong>Meet people outside.</strong> Outdoor gatherings are safer than indoor ones, particularly if indoor spaces are small and without outdoor air coming in.
-            </li>
-            <li>
-              <strong>Avoid crowded or indoor settings</strong> but if you can’t, then take precautions:
+              Separate yourself from other people
+              <br>
+              <p>
+                <strong>As much as possible, stay in a specific room</strong> and away from other people and pets in your home. If possible, you should use a separate bathroom. If you need to be around other people or animals in or outside of the home, wear a mask.
+              </p>
+              <br>
+              <p>
+                <strong>Tell your close contacts</strong> that they may have been exposed to COVID-19. An infected person can spread COVID-19 starting 48 hours (or 2 days) before the person has any symptoms or tests positive. By letting your close contacts know they may have been exposed to COVID-19, you are helping to protect everyone.
+              </p>
               <br>
               <ul>
-                <li><strong>Open a window.</strong> Increase the amount of ‘natural ventilation’ when indoors.</li>
-                <li><strong>Wear a mask.</strong></li>
+                <li>Additional guidance is available for those living in close quarters and shared housing.</li>
+                <li>See COVID-19 and Animals if you have questions about pets.</li>
+                <li>If you are diagnosed with COVID-19, someone from the health department may call you. Answer the call to slow the spread.</li>
               </ul>
             </li>
-          </ul>
-          <br><br>
-          <h3>Don’t forget the basics of good hygiene</h3>
-          <br>
-          <ul class="list">
+            <br>
             <li>
-              <strong>Regularly and thoroughly clean your hands with an alcohol-based hand rub or wash them with soap and water.</strong> This eliminates germs including viruses that may be on your hands.
+              Monitor your symptoms
+              <br>
+              <ul>
+                <li><strong>Symptoms of COVID-19 include fever, cough, or other symptoms.</strong></li>
+                <li>
+                  <strong>Follow care instructions from your healthcare provider and local health department.</strong> Your local health authorities may give instructions on checking your symptoms and reporting information.
+                </li>
+              </ul>
             </li>
+            <br>
             <li>
-              <strong>Avoid touching your eyes, nose and mouth.</strong> Hands touch many surfaces and can pick up viruses. Once contaminated, hands can transfer the virus to your eyes, nose or mouth. From there, the virus can enter your body and infect you.
+              Call ahead before visiting your doctor
+              <br>
+              <ul>
+                <li><strong>Call ahead.</strong> Many medical visits for routine care are being postponed or done by phone or telemedicine.</li>
+                <li><strong>If you have a medical appointment that cannot be postponed, call your doctor’s office,</strong> and tell them you have or may have COVID-19. This will help the office protect themselves and other patients.</li>
+              </ul>
             </li>
+            <br>
             <li>
-              <strong>Cover your mouth and nose with your bent elbow or tissue when you cough or sneeze.</strong> Then dispose of the used tissue immediately into a closed bin and wash your hands. By following good ‘respiratory hygiene’, you protect the people around you from viruses, which cause colds, flu and COVID-19.
+              If you are sick, wear a mask over your nose and mouth
+              <br>
+              <ul>
+                <li><strong>You should wear a mask over your nose and mouth</strong> if you must be around other people or animals, including pets (even at home).</li>
+                <li>
+                  You don’t need to wear the mask if you are alone. If you can’t put on a mask (because of trouble breathing, for example), cover your coughs and sneezes in some other way. Try to stay at least 6 feet away from other people. This will help protect the people around you.
+                </li>
+                <li>Masks should not be placed on young children under age 2 years, anyone who has trouble breathing, or anyone who is not able to remove the mask without help.</li>
+              </ul>
+              <p><strong>Note:</strong> During the COVID-19 pandemic, medical grade facemasks are reserved for healthcare workers and some first responders.</p>
             </li>
+            <br>
             <li>
-              <strong>Clean and disinfect surfaces frequently especially those which are regularly touched,</strong> such as door handles, faucets and phone screens.
+              Cover your coughs and sneezes
+              <br>
+              <ul>
+                <li><strong>Cover your mouth and nose</strong> with a tissue when you cough or sneeze.</li>
+                <li><strong>Throw away used tissues</strong> in a lined trash can.</li>
+                <li><strong>Immediately wash your hands</strong> with soap and water for at least 20 seconds. If soap and water are not available, clean your hands with an alcohol-based hand sanitizer that contains at least 60% alcohol.</li>
+              </ul>
             </li>
-          </ul>
-          <br><br>
-          <h3>What to do if you feel unwell?</h3>
-          <br>
-          <ul class="list">
+            <br>
             <li>
-              <strong>Know the full range of symptoms of COVID-19.</strong> The most common symptoms of COVID-19 are fever, dry cough, and tiredness. Other symptoms that are less common and may affect some patients include loss of taste or smell, aches and pains, headache, sore throat, nasal congestion, red eyes, diarrhoea, or a skin rash.
+              Clean your hands often
+              <br>
+              <ul>
+                <li><strong>Wash your hands</strong> often with soap and water for at least 20 seconds. This is especially important after blowing your nose, coughing, or sneezing; going to the bathroom; and before eating or preparing food.</li>
+                <li><strong>Use hand sanitizer</strong> if soap and water are not available. Use an alcohol-based hand sanitizer with at least 60% alcohol, covering all surfaces of your hands and rubbing them together until they feel dry.</li>
+                <li><strong>Soap and water</strong> are the best option, especially if hands are visibly dirty.</li>
+                <li><strong>Avoid touching</strong> your eyes, nose, and mouth with unwashed hands.</li>
+              </ul>
             </li>
+            <br>
             <li>
-              <strong>Stay home and self-isolate even if you have minor symptoms such as cough, headache, mild fever,</strong> until you recover. Call your health care provider or hotline for advice. Have someone bring you supplies. If you need to leave your house or have someone near you, wear a medical mask to avoid infecting others.
+              Avoid sharing personal household items
+              <br>
+              <ul>
+                <li><strong>Do not share</strong> dishes, drinking glasses, cups, eating utensils, towels, or bedding with other people in your home.</li>
+                <li><strong>Wash these items thoroughly after using them</strong> with soap and water or put in the dishwasher.</li>
+              </ul>
             </li>
+            <br>
             <li>
-              <strong>If you have a fever, cough and difficulty breathing, seek medical attention immediately. Call by telephone first, if you can</strong> and follow the directions of your local health authority.
-            </li>
-            <li>
-              <strong>Keep up to date on the latest information from trusted sources, such as WHO or your local and national health authorities.</strong> Local and national authorities and public health units are best placed to advise on what people in your area should be doing to protect themselves.
+              Clean all “high-touch” surfaces everyday
+              <br>
+              <ul>
+                <li><strong>Clean and disinfect</strong> high-touch surfaces in your “sick room” and bathroom; wear disposable gloves. Let someone else clean and disinfect surfaces in common areas, but you should clean your bedroom and bathroom, if possible.</li>
+                <li>
+                  <strong>If a caregiver or other person needs to clean and disinfect</strong> a sick person’s bedroom or bathroom, they should do so on an as-needed basis. The caregiver/other person should wear a mask and disposable gloves prior to cleaning. They should wait as long as possible after the person who is sick has used the bathroom before coming in to clean and use the bathroom.
+                  <br><br>
+                  High-touch surfaces include phones, remote controls, counters, tabletops, doorknobs, bathroom fixtures, toilets, keyboards, tablets, and bedside tables.
+                </li>
+                <br>
+                <li><strong>Clean and disinfect areas that may have blood, stool, or body fluids on them.</strong></li>
+                <li>
+                  <strong>Use household cleaners and disinfectants.</strong> Clean the area or item with soap and water or another detergent if it is dirty. Then, use a household disinfectant.
+                  <br>
+                  <ul>
+                    <li>Be sure to follow the instructions on the label to ensure safe and effective use of the product. Many products recommend keeping the surface wet for several minutes to ensure germs are killed. Many also recommend precautions such as wearing gloves and making sure you have good ventilation during use of the product.</li>
+                  </ul>
+                </li>
+              </ul>
             </li>
           </ul>
           <br>
@@ -217,7 +268,7 @@
             <li><a href="symptoms.html">Symptoms</a></li>
             <li><a href="transmission.html">Transmission</a></li>
             <li><a href="prevention.html">Prevention</a></li>
-            <li><a href="#">Procedures</a></li>
+            <li><a href="procedure.html">Procedures</a></li>
           </ul>
         </div>
       </main>
