--- a/covid19/index.html
+++ b/covid19/index.html
@@ -50,14 +50,14 @@
                         <a href="first-aid.html">First Aid</a>
                       </li>
                       <li class="dropdown-link">
-                        <a href="#">Procedures</a>
+                        <a href="procedure.html">Procedures</a>
                         <div class="dropdown second">
                           <ul>
                             <li class="dropdown-link">
-                              <a href="#">Testing Procedure</a>
+                              <a href="testing-procedure.html">Testing Procedure</a>
                             </li>
                             <li class="dropdown-link">
-                              <a href="#">Quarantine Procedure</a>
+                              <a href="quarantine-procedure.html">Quarantine Procedure</a>
                             </li>
                             <div class="arrow"></div>
                           </ul>
@@ -122,13 +122,9 @@
         <div class="content">
           <h2>Overview</h2>
           <br>
-          <p>
-            Coronavirus disease (COVID-19) is an infectious disease caused by a newly discovered coronavirus.
-          </p>
+          <p>Coronavirus disease (COVID-19) is an infectious disease caused by a newly discovered coronavirus.</p>
           <br>
-          <p>
-            Most people who fall sick with COVID-19 will experience mild to moderate symptoms and recover without special treatment.
-          </p>
+          <p>Most people who fall sick with COVID-19 will experience mild to moderate symptoms and recover without special treatment.</p>
           <br>
           <h6>For informational purposes only. Consult your local medical authority for advice.</h6>
         </div>
@@ -140,7 +136,7 @@
             <li><a href="transmission.html">Transmission</a></li>
             <li><a href="prevention.html">Prevention</a></li>
             <li><a href="first-aid.html">First Aid</a></li>
-            <li><a href="#">Procedures</a></li>
+            <li><a href="procedure.html">Procedures</a></li>
           </ul>
         </div>
       </main>
