--- a/index.html
+++ b/index.html
@@ -68,17 +68,17 @@
                   </div>
                 </li>
                 <li class="nav-link" style="--i: 1.1s">
-                  <a href="#">Our Services</i></a>
+                  <a href="services.html">Our Services</i></a>
                   <div class="dropdown">
                     <ul>
                       <li class="dropdown-link">
-                        <a href="#">Events</a>
+                        <a href="services.html#donate">Donate</a>
                       </li>
                       <li class="dropdown-link">
-                        <a href="#">Donate</a>
+                        <a href="services.html#membership">Membership</a>
                       </li>
                       <li class="dropdown-link">
-                        <a href="#">Membership</a>
+                        <a href="services.html#events">Events</a>
                       </li>
                       <div class="arrow"></div>
                     </ul>
