--- a/covid19/transmission.html
+++ b/covid19/transmission.html
@@ -68,27 +68,27 @@
                   </div>
                 </li>
                 <li class="nav-link" style="--i: 1.1s">
-                  <a href="services.html">Our Services</i></a>
+                  <a href="../services.html">Our Services</i></a>
                   <div class="dropdown">
                     <ul>
                       <li class="dropdown-link">
-                        <a href="services.html#donate">Donate</a>
+                        <a href="../services.html#donate">Donate</a>
                       </li>
                       <li class="dropdown-link">
-                        <a href="services.html#membership">Membership</a>
+                        <a href="../services.html#membership">Membership</a>
                       </li>
                       <li class="dropdown-link">
-                        <a href="services.html#events">Events</a>
+                        <a href="../services.html#events">Events</a>
                       </li>
                       <div class="arrow"></div>
                     </ul>
                   </div>
                 </li>
                 <li class="nav-link" style="--i: 1.35s">
-                  <a href="#">About Us</a>
+                  <a href="../gallery.html">Gallery</a>
                 </li>
                 <li class="nav-link" style="--i: 1.35s">
-                  <a href="#">Contact Us</a>
+                  <a href="../contact.html">Contact Us</a>
                 </li>
               </ul>
             </div>
